--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 
 before_install:
 - sudo apt-get -qq update
-- sudo apt-get install -qq cmake pygame gtts libboost-python-dev
+- sudo apt-get install -qq cmake libboost-python-dev
 
 install:
   - pip install -r requirements.txt
