--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
 
 install:
   - pip install -r requirements.txt
-  - pip install tox-travis
 
-script: tox
+script:
+  - python setup.py test
